# conan

./: Cargo.toml  Makefile  README.md  install.sh  startup.sh
.github/workflows/: release-version.yaml
database/: Cargo.toml
database/src/: lib.rs
example/: conan.toml  user1.toml  user2.toml
protocol/: Cargo.toml
protocol/src/: constants.rs  lib.rs  msg.rs  operations.rs
protocol/src/comm/: enums.rs  mod.rs
protocol/src/config/: mod.rs
protocol/src/crypto/: aead.rs  identity.rs  mod.rs  ratchet.rs
protocol/src/database/: mod.rs  setup.rs
protocol/src/database_entities/: chat.rs  peer.rs
protocol/src/entities/: manager.rs  master.rs  mod.rs  slave.rs
protocol/src/entities/database/: chat.rs  mod.rs  peer.rs
protocol/src/entities/server/: manager.rs  master.rs  slave.rs
protocol/src/requests/: mod.rs
protocol/src/server_entities/: manager.rs  master.rs  slave.rs
protocol/src/tests/: mod.rs
server/: Cargo.toml
server/src/: main.rs
server/src/functions/: mod.rs
tui/: Cargo.toml
tui/src/: lib.rs  main.rs  matches.rs
tui/src/components/: confirmation_screen.rs  loading_screen.rs  main_component.rs  mod.rs  new_peer.rs  notification.rs  welcome.rs
tui/src/functions/: keys.rs  mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs
