[workspace]
resolver = "2"
members = ["tui", "server", "database", "protocol"]

[workspace.package]
authors = ["grishma <grishmadev@proton.me>"]
version = "1.0.0"
license = "MIT"
edition = "2024"
rust-version = "1.90"

[workspace.dependencies]
conan-protocol = { path = "protocol/" }
conan-database = { path = "database/" }
tokio = { version = "1.52.3", features = ["full"] }
arti-client = { version = "0.44.0", features = [
  "onion-service-client",
  "onion-service-service",
] }

tor-hsservice = "0.44.0"
tor-rtcompat = "0.44.0"
tor-cell = "0.44.0"
tor-hscrypto = "0.44.0"
tor-llcrypto = "0.44.0"
tokio-rustls = "0.26.4"
rustls = "0.23.41"
webpki-roots = "1.0.8"
tracing-subscriber = "0.3.23"
reqwest = "0.13.4"
serde_json = "1.0.150"
serde = { version = "1.0.228", features = ["derive"] }
futures = "0.3.32"
safelog = "0.9.0"
rand = "0.10.1"
hkdf = "0.13.0"
sha2 = "0.11.0"
chacha20poly1305 = "0.11.0-rc.3"
bincode = { version = "2.0.1", features = ["serde"] }
x25519-dalek = "2.0.1"
ed25519-dalek = { version = "2.2.0", features = ["hazmat"] }
ratatui = "0.30.2"
crossterm = "0.29.0"
clap = { version = "4.6.1", features = ["derive"] }
config = "0.15.25"
ssh-encoding = { version = "0.3.0", features = ["alloc"] }
base64 = "0.22.1"


[profile.release]
lto = true

[workspace.lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_code = "deny"

[workspace.lints.clippy]
correctness = { level = "warn", priority = -1 }
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
