[package]
name = "conan-protocol"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "conanprotocol"
doctest = false

[lints]
workspace = true

[dependencies]
arti-client.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
rustls.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tor-hsservice.workspace = true
tor-rtcompat.workspace = true
tor-cell.workspace = true
tor-hscrypto.workspace = true
tor-llcrypto.workspace = true
futures.workspace = true
safelog.workspace = true
rand.workspace = true
bincode.workspace = true
x25519-dalek.workspace = true
ed25519-dalek.workspace = true
clap.workspace = true
config.workspace = true
ssh-encoding.workspace = true
base64.workspace = true
chrono.workspace = true
rusqlite.workspace = true
notify-rust.workspace = true
chacha20poly1305.workspace = true
hkdf.workspace = true
sha2.workspace = true
zeroize.workspace = true
thiserror.workspace = true
bs58.workspace = true
hex.workspace = true
