[package]
name = "conan"
description = "TUI Client for Conan"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "conan"
path = "src/main.rs"
doctest = false

[dependencies]
conan-protocol.workspace = true
conan-database.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tor-hscrypto.workspace = true
ratatui.workspace = true
crossterm.workspace = true
bincode.workspace = true

[lints]
workspace = true
